--- a/literature.bib
+++ b/literature.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Alexander Bock at 2012-09-20 11:25:44 +0200 
+%% Created for Alexander Bock at 2012-09-25 17:08:42 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Djurcilov2002239,
+	Author = {Suzana Djurcilov and Kwansik Kim and Pierre Lermusiaux and Alex Pang},
+	Date-Added = {2012-09-25 14:51:31 +0000},
+	Date-Modified = {2012-09-25 15:08:42 +0000},
+	Doi = {10.1016/S0097-8493(02)00055-9},
+	Issn = {0097-8493},
+	Journal = {Computers and Graphics},
+	Keywords = {Textures},
+	Number = {2},
+	Pages = {239 - 248},
+	Title = {Visualizing scalar volumetric data with uncertainty},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0097849302000559},
+	Volume = {26},
+	Year = {2002},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0097849302000559},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/S0097-8493(02)00055-9}}
 
 @book{MultipleViewGeometry,
 	Date-Added = {2012-09-12 15:22:32 +0000},
