pavis13-dbs: included first round of reviews; added reviews
git-svn-id: https://scivis.itn.liu.se/svn/publications/workinprogress/pavis13-dbs@4165 cd0c9ba3-fe29-0410-b0c2-9a6eeba77867

--- a/pavis13-dbs.tex
+++ b/pavis13-dbs.tex
@@ -111,7 +111,9 @@ Deep Brain Stimulation (DBS) is a well-established procedure for reducing the sy
 %
 In recent years, Microelectrode Recording (MER) has emerged as an additional technique allowing the surgeon to better locate the target region for DBS intra-operatively~\cite{Lenz1988}. MER measures the electrical field of the brain during the surgery by inserting electrodes into the access path. The measured information is presented to the surgical staff by showing the amplitude in the time domain for each electrode, from which the expert differentiates functional regions of the brain. In order to allow for an intuitive and accurate placement of the electrodes, it is important that the surgeon has access to all these modalities in a unified manner.
 
-Within this paper we propose an interactive visualization system to support the DBS placement procedure by combining the values and uncertainties of these different measurements, whereby the combined information is used to guide the surgeon to the optimal placement location. To this end, we provide two views enhancing the final placement of the electrode. These views combine the information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon. One of the views fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data to the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. The other provides an information visualization approach to present the data in a quantitative way.
+Within this paper we propose an interactive visualization system to support the surgeon during a DBS placement procedure. From the surgeons point of view, it is most important to create a comprehensive system supporting the decision-making about the optimal placement location for the emitting electrode to allow for a higher accuracy and precision. On the one hand, this is done by fusing the different modalities to increase the surgeon's mental registration between these. On the other hand, by combining the uncertainties and enabling access to this in a quantitative way, we can increase the surgeon's confidence in the gathered data. We address these technical objectives in the following ways: We provide two views enhancing the final placement of the electrode. These views combine the information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon in order to guide him to the optimal placement location. One of the views fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data to the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. The other provides an information visualization approach to present the data in a quantitative way. The original data and derived information is presented as profile plots allowing the surgeon to see the optimal placement position in one glance and, thus, enable a more effective placement of the electrode.
+
+%Within this paper we propose an interactive visualization system to support the DBS placement procedure by combining the values and uncertainties of these different measurements, whereby the combined information is used to guide the surgeon to the optimal placement location. To this end, we provide two views enhancing the final placement of the electrode. These views combine the information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon. One of the views fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data to the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. The other provides an information visualization approach to present the data in a quantitative way.
 
 In the remainder of this paper we will briefly explain the DBS process, derive uncertainty regions for the measurements, and show how to visualize them in a unified approach.
 
@@ -129,9 +131,9 @@ In the remainder of this paper we will briefly explain the DBS process, derive u
 %
 
 \section{Related Work}\label{sec:related}
-An important step in the DBS intervention consists of the trajectory planning, which is usually done manually. There has been a lot of work on (semi-)automatic trajectory planning in the last years. Gemmar et al. determine the mid-saggital plane and the localization of the anterior commissures (AC) and the posterior commissures (PC)~\cite{Gemmar2008}. Their method is based on a region-growing based segmentation algorithm, and requires a nonlinear anisotropic filtering kernel. The entry point is varied while for every trajectory a cost function is evaluated and the system operator selects the best trajectory. Bruneberg et al. facilitate a segmentation of the STN and determine the optimal trajectory by avoiding ventricles, gyri, and blood vessels, which need to be segmented beforehand as well~\cite{Brunenberg2007}. Khlebnikov~et~al. suggested a system to find optimal access paths by interpreting tumors as light sources and determining the cost-function based on that aspect~\cite{Khlebnikov2011}. A visualization system for the pre-operative planning was provided by Beyer et al., who propose a multi-volume renderer employing cut-away views to allow for visual access to the brain structures of interest~\cite{Beyer2007}. Furthermore, they included a skull peeling algorithm, which we incorporated also in our system. Serra et al. propose a neurosurgery planning tool for tumor resections, that uses a virtual workbench to increase user immersion and which provides additional 3D interaction tools~\cite{Serra1998}. Watanabe~et~al. developed a computer assisted surgery tool to treat cortical lesions and used a curvilinear reformatting to allow direct access to the data~\cite{Watanabe}.  More recently, Rieder et al. propose a planning tool for neurosurgical tumor treatment, that uses a cylindrical cut for a better view of the target region~\cite{Rieder2008}. Additionally, they introduce a distance ring to denote the relative depth of a specific region of interest. Furthermore, the same authors introduce visualization techniques to enhance the perception of structures when using multimodal rendering setups~\cite{Rieder2008a}.
+An important step in the DBS intervention consists of the trajectory planning, which is usually done manually. There has been a lot of work on (semi-)automatic trajectory planning in the last years. Gemmar et al. determine the mid-sagittal plane and the localization of the anterior commissures (AC) and the posterior commissures (PC)~\cite{Gemmar2008}. Their method is based on a region-growing based segmentation algorithm, and requires a nonlinear anisotropic filtering kernel. The entry point is varied while for every trajectory a cost function is evaluated and the system operator selects the best trajectory. Bruneberg et al. facilitate a segmentation of the STN and determine the optimal trajectory by avoiding ventricles, gyri, and blood vessels, which need to be segmented beforehand as well~\cite{Brunenberg2007}. Khlebnikov~et~al. suggested a system to find optimal access paths by interpreting tumors as light sources and determining the cost-function based on that aspect~\cite{Khlebnikov2011}. A visualization system for the pre-operative planning was provided by Beyer et al., who propose a multi-volume renderer employing cut-away views to allow for visual access to the brain structures of interest~\cite{Beyer2007}. Furthermore, they included a skull peeling algorithm, which we incorporated also in our system. Serra et al. propose a neurosurgery planning tool for tumor resections, that uses a virtual workbench to increase user immersion and which provides additional 3D interaction tools~\cite{Serra1998}. Watanabe~et~al. developed a computer assisted surgery tool to treat cortical lesions and used a curvilinear reformatting to allow direct access to the data~\cite{Watanabe}.  More recently, Rieder et al. propose a planning tool for neurosurgical tumor treatment, that uses a cylindrical cut for a better view of the target region~\cite{Rieder2008}. Additionally, they introduce a distance ring to denote the relative depth of a specific region of interest. Furthermore, the same authors introduce visualization techniques to enhance the perception of structures when using multimodal rendering setups~\cite{Rieder2008a}.
 
-In the area of MER data integration, Miocinovic et al. provide a system for a guided DBS electrode implantation in non-human~\cite{Miocinovic2007} as well as in human primates~\cite{Cicerone2}. They provide metaphors for visualizing region information but base the information on a 3D atlas only instead of using the MER signal. Also, they do not employ patient checks for feedback. In contrast, we provie a unified visualization guidance based on multi-modal measurements. Furthermore, their main focus is MER-based region detection for generating an atlas of the brain. D'Haese et al. present a system for use in human surgery but focus more on the comparison between MER selected targets and atlas-based target selection~\cite{Haese2005}. They also do not incorporate the patient test information into their system, which is required for a sufficient level of accuracy and confidence. Sperka et al. also present a system to improve the planning phase for stereotaxic surgery~\cite{Sperka2011}. Furthermore, the use of fMRI data together with other modalities was investigated in the context of stereotactic interventions on macaques~\cite{Ohayon2012}.
+In the area of MER data integration, Miocinovic et al. provide a system for a guided DBS electrode implantation in non-human~\cite{Miocinovic2007} as well as in human primates~\cite{Cicerone2}. They provide metaphors for visualizing region information but base the information on a 3D atlas only instead of using the MER signal. Also, they do not employ patient checks for feedback. In contrast, we provide a unified visualization guidance based on multi-modal measurements. Furthermore, their main focus is MER-based region detection for generating an atlas of the brain. D'Haese et al. present a system for use in human surgery but focus more on the comparison between MER selected targets and atlas-based target selection~\cite{Haese2005}. They also do not incorporate the patient test information into their system, which is required for a sufficient level of accuracy and confidence. Sperka et al. also present a system to improve the planning phase for stereotaxic surgery~\cite{Sperka2011}. Furthermore, the use of fMRI data together with other modalities was investigated in the context of stereotactic interventions on macaques~\cite{Ohayon2012}.
 %
 %
 %
@@ -223,7 +225,8 @@ The goal of the planning phase is to identify the desired target region based on
 The contextual view is the common element that is present in all three phases of our system. %This constant presence is useful as it creates a \emph{horizontal mental registration} between the different phases in addition to the \emph{vertical mental registration} present within each phase. %The latter is achieved by using this view as a frame of reference so that the individual information of the other views can be related to the common contextual view.
 It is based on a multimodal visualization of the pre-operatively acquired CT and MRI scans. To improve spatial comprehension, the three modalities are not fused but vertically separated such that, for each layer, the modality of highest interest is visible (see Figure~\ref{fig:recordingphase:3d}). At the lowest layer we render the T$_1$-weighted MRI with a transfer function that shows the whole head of the patient. The spin-lattice time was chosen since it allows for an easier classification of the skin and the relatively stable gradients allow for reasonable shading. This part communicates the orientation of the patient intuitively and thereby reduces dangerous left-right mismatches by the surgical staff. The cut-off line between this layer and the next can be interactively moved by the user to enable data inspection. The lower layer is capped with a slice view that provides the surgeon with direct access to structural information embedded within the spatial context. The skull is partly visualized in the middle layer, based on the CT scan, to serve as a smooth transition between the lower layer and the brain. To obtain an occlusion-free view to the brain we employ a skull stripping approach, described in Section~\ref{sec:implementation}, at the highest layer. As MRI has a low signal-to-noise ratio, gradient-based shading is not viable when visualizing the brain. Instead, we employ depth darkening~\cite{Luft2005}, which increases the depth perception of the brain's structures. The depth of the intended target region is visible as a yellow band surrounding the skull and serves as another depth cue.
 
-We present the access path to the surgeon by removing the structures around the trajectory~\cite{Weiskopf2002,Rieder2008}. The removed area is cylinder-shaped and possesses a variable, user-defined radius so that the surgeon can inspect the walls of cylinders with varying radii. To increase the amount of information the surgeon gains from the cylinder walls, the same transfer function as used in the slice representations is applied here. This increased access path radius gives the surgeon access to more information in a spatial context.
+We present the access path to the surgeon by removing the structures around the previously determined trajectory~\cite{Weiskopf2002,Rieder2008}. The removed area is cylinder-shaped and possesses a variable, user-defined radius so that the surgeon can inspect the walls of cylinders with varying radii. To increase the amount of information the surgeon gains from the cylinder walls, the same transfer function as used in the slice representations is applied here. More importantly, this increased access path allows more information to be shown, and remain visible, in a spatial context. As described in the next section, we can include glyphs into the removed area to provide information about attributes along the trajectory.
+%
 %So far, all the described features of the contextual view are common to all three phases. However, the specialty in this phase for the contextual view is, that it also indicates the slice which is currently viewed in the slice view, as a dark gray band projected onto the head. Based on this band, the surgeon can immediately see at which depth the currently viewed slice is located. While any surgeon will possess the knowledge to roughly infer this information from the surrounding tissue or by comparing the number of total slices to the current slice number, both methods require conscious or subconscious mental processing which should be avoided. Perceiving a band projected to the 3D structures is a much more intuitive way requiring potentially less cognitive effort, such that the surgeon can focus on locating the target region.
 
 \subsection{Recording Phase}\label{sec:overview:recording}
@@ -243,13 +246,13 @@ Possibilities exist to automatically detect the region. The analysis and computa
 \begin{figure}
     \centering
     \fbox{\includegraphics[width=0.9\columnwidth]{figures/recording_3d}}
-    \caption{In the recording phase the contextual view additionally shows the intra-operatively acquired x-ray scans. It further shows the electrode while it is begin advanced towards the target. The beads behind the electrodes show the results of the MER signal analysis.}
+    \caption{In the recording phase the contextual view additionally shows the intra-operatively acquired x-ray scans. It further shows the electrode while it is being advanced towards the target. The beads behind the electrodes show the results of the MER signal analysis.}
     \label{fig:recordingphase:3d}
 \end{figure}
 
 The contextual view as employed in the recording phase is, in most parts, identical to the one used in the planning phase. However, as this phase of the intervention process requires additional information the view differs in some ways. First, since the current depth of the MER electrodes is known, we can compute and display a representation of the electrodes. As the extent of the electrodes is very small compared to the whole head, and we are only interested in the general position and orientation of the electrodes, just a single representative proxy electrode is rendered. 
 
-Using the MER signal analysis, we can classify depth values by their functional areas. Doing this continuously for every point along the access path would introduce a lot of visual clutter that would not give additional insight but rather confuse the user. Therefore, we classify and summarize segments along the trajectory that we can classify up to an acceptable certainty. For each classified segment we display a visual representation, to which we refer as a \emph{bead}, in the center of the canal at that specific position. Each bead is rendered as a shaded sphere with a specific color. This visual metaphor has been proposed before~\cite{Miocinovic2007,Haese2005} and provides both contextual and functional information. The bead's color correlates to the classified region. A black bead is created if there has been a longer distance without a reliable classification. These intermediate beads are important to maintain the analogy of a bead string, helping the user understand the spatial relationship. Different shades of red are used for areas that lie outside of the desired target area. It is important to present this information to the surgeon as he can deduce more information from the changes between different areas. The first choice for a color would be different shades of gray, since it does not draw as much attention. But since the canal wall is gray and the human visual system is not adapted to differentiate gray tones, we chose red as the hue for these regions. As soon as the analysis of the spike signals indicates that the MER electrodes are in the target region, green beads are rendered that draw attention to those structures. Furthermore this color coding resembles the traffic light color scheme proposed by Rieder et al.~\cite{Rieder2010}, which intuitively assigns green to {\it good} areas, while red is assigned to {\it bad} areas. To further reduce visual clutter only one bead is rendered for all electrodes. This is a viable simplification as the different functional regions of the brain are oriented such that either all electrodes detect the same signal (either type of tissue or undefined) or a subset of electrodes detects a regional signal and the others detect an undefined signal.
+Using the MER signal analysis, we can classify depth values by their functional areas. Doing this continuously for every point along the access path would introduce a lot of visual clutter that would not give additional insight but rather confuse the user. Therefore, we classify and summarize segments along the trajectory that we can classify up to an acceptable certainty. For each classified segment we display a glyph representation, to which we refer as a \emph{bead}, in the center of the canal at that specific position. Each bead is rendered as a shaded sphere with a specific color. This visual metaphor has been proposed before~\cite{Miocinovic2007,Haese2005} and provides both contextual and functional information. The bead's color correlates to the classified region. A black bead is created if there has been a longer distance without a reliable classification. These intermediate beads are important to maintain the analogy of a bead string, helping the user understand the spatial relationship. Different shades of red are used for areas that lie outside of the desired target area. It is important to present this information to the surgeon as he can deduce more information from the changes between different areas. The first choice for a color would be different shades of gray, since it does not draw as much attention. But since the canal wall is gray and the human visual system is not adapted to differentiate gray tones, we chose red as the hue for these regions. As soon as the analysis of the spike signals indicates that the MER electrodes are in the target region, green beads are rendered that draw attention to those structures. Furthermore this color coding resembles the traffic light color scheme proposed by Rieder et al.~\cite{Rieder2010}, which intuitively assigns green to {\it good} areas, while red is assigned to {\it bad} areas. To further reduce visual clutter only one bead is rendered for all electrodes. This is a viable simplification as the different functional regions of the brain are oriented such that either all electrodes detect the same signal (either type of tissue or undefined) or a subset of electrodes detects a regional signal and the others detect an undefined signal.
 
 Even with the application of the depth darkening shading technique described by Luft et al.~\cite{Luft2005}, the depth perception of the electrode is not optimal. One possible solution would be the introduction of a distance ring as described by Rieder et al.~\cite{Rieder2008}. Instead, to reduce occlusion within the focus of the view, we decided to show a linear scale outside of the view's focus where it does not block any relevant structures. The vertical white bar in this scale gives immediate feedback about the electrode's position. This widget is the first visualization used within our system, which employs a \emph{normalized view}. It means that the left-most position in the view corresponds to the entry point of the access path and the right-most position is slightly further than the intended target region. As soon as a functional area has been detected the background is colored with the respective color as well. Even though the beads convey a good absolute spatial orientation their relative orientation is not immediately obvious for occlusion and perspective distortion. On the other hand, the distance widget does not contain any information about the absolute location. The combination of the beads in the contextual view and the color in the distance widget provide the relevant information to the surgeon.
 
@@ -278,7 +281,7 @@ Another addition to this view is the inclusion of the intra-operative x-ray imag
     \label{fig:recordingphase:sound}
 \end{figure}
 
-In this view we present the raw data collected by the MER electrodes in real time. One graph is shown for each electrode, which shows the electric potential difference plotted over time. The scaling factor of the ordinate can be manually adjusted to account for patient and equipment specific differences. The identifying names for each electrode are shown on the left hand side next to the graphs.
+In this view we present the raw data collected by the MER electrodes in real time. One graph is shown for each electrode, which shows the electric potential difference plotted over time. The scaling factor of the ordinate can be manually adjusted using a slider to account for patient and equipment specific differences. The identifying names for each electrode are shown on the left hand side next to the graphs.
 
 Since surgeons are generally more interested in the distribution of spikes than the background noise, we visually enhance spikes such that they are the immediate focus of attention. This visual enhancement is done by defining a threshold value below which all values are de-emphasized, i.\,e.,~a darker color is chosen and above which the values are emphasized with a brighter color. There is an exponential transition in the area around the threshold to reduce any unwanted attention that would otherwise result from a discontinuity. This threshold value can be varied by the user to include a wider or narrower range of values in the focus area. The color scheme matches the color on the electrode representations and at the same time intensifies the perceptual distance between the colors used for the thresholded area and the spikes.
 
@@ -333,7 +336,7 @@ The contextual view introduced above is shown to maintain the surgeon's mental r
   \centering
   \fbox{\includegraphics[width=0.98\columnwidth]{figures/electrode_closeup.jpg}}
   \fbox{\includegraphics[width=0.98\columnwidth]{figures/target-region_full}}
-  \caption{The target closeup visualization shows the potential target regions (planned=yellow, speech tests=blue, movement tests=purple). The spatial context provided by the MRI signal is color coded using the red-green MER region mapping. The stimulation electrode changes its color when it is entering the intersection of the potential target area.}
+  \caption{The target closeup visualization shows the potential target regions (speech tests=blue, movement tests=purple). The spatial context provided by the MRI signal is color coded using the red-green MER region mapping. The stimulation electrode changes its color when it is entering the intersection of the potential target area. This view gives qualitative access to all uncertainty data fused with structural data in one glance.}
   \label{fig:targetregion}
 \end{figure}
 
@@ -377,7 +380,7 @@ In this section we describe selected implementation details of our system.
 
 
 \section{Evaluation}\label{sec:evaluation}
-As computer-aided surgery systems are combining an increasing number of information from different sources, it is important that the interfaces reduce the cognitive efforts required to use the system~\cite{Visarius1997,Martelli2003}. To evaluate the practicability of the proposed system we have conducted a qualitative user-study with five neurosurgeons, all of whom have extensive experience in the field and perform DBS interventions on a regular basis. The study has been designed with respect to the guidelines for evaluating computer-aided surgery systems, which have been proposed by Martelli et al.~\cite{Martelli2003}. The neurosurgeons were shown a showcase demonstration of the system going through all three phases (planning, recording, and placement). A demonstration was chosen as a pre-study showed that the complexity of usage would hinder an unbiased evaluation. The data for this demonstration was recorded reconstructed from a real intervention. After the demonstration, the neurosurgeons answered a questionnaire consisting of eight statements and questions, as well as a free text field for arbitrary comments. Each of these statements and questions had a positive and a negative reply with no abstain. The following table shows these statements and questions together with the number of positive answers:
+As computer-aided surgery systems are combining an increasing number of information from different sources, it is important that the interfaces reduce the cognitive efforts required to use the system~\cite{Visarius1997,Martelli2003}. To evaluate the practicability of the proposed system we have conducted a qualitative user-study with five neurosurgeons, all of whom have extensive experience in the field and perform DBS interventions on a regular basis. The study has been designed with respect to the guidelines for evaluating computer-aided surgery systems, which have been proposed by Martelli et al.~\cite{Martelli2003}. The neurosurgeons were shown a showcase demonstration of the system going through all three phases (planning, recording, and placement). A demonstration was chosen as a pre-study showed that the complexity of usage, in the current form, would hinder an unbiased evaluation. The data for this demonstration was recorded and reconstructed from a real intervention. After the demonstration, the neurosurgeons answered a questionnaire consisting of eight statements and questions, as well as a free text field for arbitrary comments. Each of these statements and questions had a positive and a negative reply with no abstain. The following table shows these statements and questions together with the number of positive answers:
 
 %If we denote the result of each question by dividing the number of positive reply by the number of participants, we get a scale in which all answers lie between 0 and 1.
 %The questions and their results in parentheses: %"The working areas are large and clearly visualized" (1.0), "The user is not disturbed by images, colors, or animation while interacting with the system" (0.8), "The result of any action done by the user is clearly and immediately visualized" (0.8), "The tools provided by the system are easy to use" (0.6), "System data is understandable and clearly visualized" (0.8), "The actions' succession proposed by the system is logical from the user's point of view" (1.0), "The system's features are compatible with all the user's expectations" (0.8), "Would you like to use this system during an intervention in addition to the old system?" (1.0), and "Is the fusion of MER signals with image data useful for increasing the accuracy?" (0.6)
@@ -398,9 +401,9 @@ Is the fusion of MER signals with image data useful for increasing the accuracy?
 \noindent \textbf{Discussion.} Overall, the feedback from the neurosurgeons was very positive. The least satisfied expert agreed to only five statements whereas the most satisfied expert agreed to all. On average the experts agreed to $6.5$ statements if we assume an equal weighting of the statements. The relatively bad score of only three positive answers to the last question seems to be the strongest drawback to the method, but considering that all of the experts would use our system in the operation room makes it a very good result. One expert emphasized especially the "correlations between target region and the neurophysiological data" as an important aspect of the system. Only two neurosurgeons did not see the benefits of incorporating the fused views, while they still liked the overlapping view of the different probable target regions. The third question confirmed the expected usability result from the pre-study.
 
 \section{Conclusions and Future Work}\label{sec:conclusions}
-In this paper we have presented a visualization system that has been designed to support neurosurgeons during DBS interventions by fusing measurements, along with their uncertainties, about probable target regions. This multimodal information is presented to the surgeon during the intervention both in the context of the rendered imaging data, as well as a separate view showing the combination of these measurements. As the MER and patient checks are performed during DBS interventions to improve the localization of the stimulation electrode, we feed back the results of these checks into our system. When visualizing and intersecting the potential target regions we take into account the different degrees of uncertainty that result from their acquisition process. This uncertainty-aware information fusion in image space as well as in a profile plot allows the surgeon to better assess the electrode placement and detect the optimal electrode placement effortlessly. To estimate the clinical impact of the presented system we performed an evaluation with five neurosurgeons, who regularly perform DBS interventions. The results indicate that the presented visualization approaches are of great interest and have the potential to improve DBS interventions.
+In this paper we have presented a visualization system that has been designed to support neurosurgeons during DBS interventions by fusing measurement data, along with their uncertainties, with structual modalities to facilitate mental registration. This multimodal information is presented to the surgeon during the intervention both in the context of the rendered imaging data, as well as a separate view showing the combination of these measurements. As the MER and patient checks are performed during DBS interventions to improve the localization of the stimulation electrode, we feed back the results of these checks into our system. When visualizing and intersecting the potential target regions we take into account the different degrees of uncertainty that result from their acquisition process. This uncertainty-aware information fusion in image space as well as in a profile plot allows the surgeon to better assess the electrode placement and detect the optimal electrode placement effortlessly. To estimate the clinical impact of the presented system we performed an evaluation with five neurosurgeons, who regularly perform DBS interventions. The results indicate that the presented visualization approaches are of great interest and have the potential to improve DBS interventions.
 
-In the future we would like to further improve the presented system based on the feedback we have received from the surgeons during our evaluation. Furthermore, it would be very beneficial to evaluate its effectiveness in the surgery room. However, a full evaluation requires a lot of effort as it would require the system to be certified for usage in the operation room. While the current system considers most modalities, the integration of DTI could also be considered in the future. Another source of information we would like to include is the region of the brain that is affected by the stimulation signal, the \emph{volume of tissue activated}. This would simulate the region in the brain that would be influenced by the current electrode position and could thereby function as a prediction as well as a verification tool. While we have currently focused on the recording and placement phases of the DBS intervention, we would also like to extend the system for long term horizontal studies of electrode placements. As no extensive statistics about the long term effects of varying placement positions and the applied electric fields exist, this could be valuable information for further improving DBS interventions in the future.
+In the future we would like to further improve the presented system based on the feedback we have received from the surgeons during our evaluation. We would especially like to flatten the learning curve currently necessary. Furthermore, it would be very beneficial to evaluate its effectiveness in the surgery room. However, a full evaluation requires a lot of effort as it would require the system to be certified for usage in the operation room. While the current system considers most modalities, the integration of DTI could also be considered in the future. Another source of information we would like to include is the region of the brain that is affected by the stimulation signal, the \emph{volume of tissue activated}. This would simulate the region in the brain that would be influenced by the current electrode position and could thereby function as a prediction as well as a verification tool. While we have currently focused on the recording and placement phases of the DBS intervention, we would also like to extend the system for long term horizontal studies of electrode placements. A major part of this horizontal study would be the ability to compare the measured accuracy with the outcome of the intervention. As no extensive statistics about the long term effects of varying placement positions and the applied electric fields exist, this could be valuable information for further improving DBS interventions in the future.
 
 %\section*{Acknowledgements}
 %We would like to thank all neurosurgeons which evaluated 
